force-app/main/default/objects/Product_Revenue_Lines__c/Product_Revenue_Lines__c.object-meta.xml
<CustomObject>
    <label>Product Revenue Line</label>
    <nameField>
        <displayFormat>PRL-{00000}</displayFormat>
        <label>Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Revenue Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>