force-app/main/default/objects/Product_Revenue_Lines__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Revenue Line</relationshipLabel>
    <relationshipName>Product_Revenue_Line</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>