force-app/main/default/objects/Product_Revenue_Lines__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Product Revenue Line</relationshipLabel>
    <relationshipName>Product_Revenue_Line</relationshipName>
    <type>Lookup</type>
</CustomField>