force-app/main/default/objects/Product_Revenue_Lines__c/fields/Revenue_Plan__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Plan__c</fullName>
    <label>Revenue Plan</label>
    <referenceTo>Revenue_Plan__c</referenceTo>
    <relationshipLabel>Product Revenue Line</relationshipLabel>
    <relationshipName>Product_Revenue_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>